Wed Jul  1 23:21:33 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-each-element-mapper.rb: [SR#102] map対応

Wed Jul  1 22:14:29 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* *.rb: [SR#102] 直接接続可能なアーキテクチャ

Mon Jun 29 15:37:26 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* sort18.rb, sort19.rb: [BUG:101] ソートができない
	
Mon Jun 29 15:28:04 2009  Hajime Masuda <hajime.masuda@mail.rakuten.co.jp>

	* bug fix: ファイルオープンのモードがおかしかったので直した

Wed Jun 24 20:09:31 2009  Hajime Masuda  <hajime.masuda@mail.rakuten.co.jp>

	* lib/fairy/job/each-substream-mapper.rb, lib/fairy/job/roma.rb
          test/test-roma.rb: ROMA 連携機能. 関連して mapf に :N オプション
	  追加 (平滑化深さ指定. 1.9 のみ)

Mon Jun  8 17:20:57 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* bin/{controller,master,node,processor}, lib/fairy.rb,
	  share/encodinf.rb: [SRS#78] 入力ファイルのエンコーディングができる
	* share/locale.rb: locale関係をくくり出した

Mon Jun  8 14:55:46 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* *.rb: [SRS#10] 適切な例外の定義

Wed Jun  3 18:24:54 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* master.rb: [SR#80] 可動待ちノードの切り離し機能

Wed Jun  3 17:48:48 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-local-file-output.rb, local-file-output.rb: [SR#99]
	  local-file-outputでまとめ送りする
	* bhere.rb, here.rb: [SR#98] hereでまとめ送りする
	* n-local-file-output.rb: 行分割がちゃんとできていなかった.
	* fairy-BODY.templ, bin/fairy-cat: [SR#37] fairy-cat作成

Wed Jun  3 15:24:34 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* local-file-input.rb, n-local-file-input.rb: [SR#82] local-fileで
	  のまとめ送り対応.

Tue Jun  2 17:18:49 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* test/test-map.rb, test/test-minifairy.rb: 追加
	* n-mod-group-by.rb: オブジェクトリーク解消
	* share/hash-1.rb: 1文字目でハッシュするように変更

Thu May 28 19:36:53 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* each-substream-mapper.rb: mapfちょっと最適化にバグがあった
	* port.rb: Export#push_buf 追加

Wed May 27 17:50:40 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* hash-simple-hash.rb: 増田版SimpleHash追加
