@@ -31,6 +31,8 @@ module Fairy
 
 ##CONF.CONTROLLER_ASSIGN_NEW_PROCESSOR_N_FACTOR = 1
 
+##  CONF.POSTMAPPING_POLICY = nil
+
 ##CONF.PREQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
 #  CONF.PREQUEUING_POLICY = {:queuing_class => :PoolQueue}
  CONF.PREQUEUING_POLICY = {:queuing_class => :ChunkedPoolQueue}
