@@ -1,3 +1,7 @@
+Mon Jul  6 17:21:45 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* *.rb: [SR#102] postmapping_policy: MPNewProcessor
+
 Wed Jul  1 23:21:33 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* n-each-element-mapper.rb: [SR#102] map対応
